--- a/tictactoe/app/views/games/show.html.erb
+++ b/tictactoe/app/views/games/show.html.erb
@@ -1,23 +1,15 @@
 <p id="notice"><%= notice %></p>
 
 <table>
-  <tr>
-    <td>X</td>
-    <td>O</td>
-    <td>O</td>
-  </tr>
-  <tr>
-    <td>X</td>
-    <td>X</td>
-    <td>X</td>
-  </tr>
-  <tr>
-    <td>O</td>
-    <td>O</td>
-    <td>X</td>
-  </tr>
+<% (0..2).to_a.each do |row| %>
+<tr>
+  <% (0..2).to_a.each do |cell| %>
+  <td></td>
+  <% end %>
+</tr>
+<% end %>
+  
 </table>
-
 <p>
   <strong>User1:</strong>
   <%= @game.user1_id %>
