--- a/tictactoe/app/views/games/show.html.erb
+++ b/tictactoe/app/views/games/show.html.erb
@@ -1,10 +1,19 @@
 <p id="notice"><%= notice %></p>
 
 <table>
-<% (0..2).to_a.each do |row| %>
+<% table = (0..8).to_a %>
+<% table.each_slice(3) do |slice| %>
 <tr>
-  <% (0..2).to_a.each do |cell| %>
-  <td></td>
+  <% slice.each do |cell| %>
+  <td>
+    <% if @game.moves.find_by_value(cell) && @game.moves.find_by_value(cell).user_id == @game.user1_id %>
+    <%= "x" %>
+    <% elsif @game.moves.find_by_value(cell) && @game.moves.find_by_value(cell).user_id == @game.user2_id %>
+    <%= "o" %>
+    <% else %>
+    <%= " " %>
+    <% end %>
+  </td>
   <% end %>
 </tr>
 <% end %>
