--- a/tictactoe/app/views/games/show.html.erb
+++ b/tictactoe/app/views/games/show.html.erb
@@ -7,11 +7,11 @@
   <% slice.each do |cell| %>
   <td>
     <% if @game.moves.find_by_value(cell) && @game.moves.find_by_value(cell).user_id == @game.user1_id %>
-    <%= "x" %>
+    <%= "X" %>
     <% elsif @game.moves.find_by_value(cell) && @game.moves.find_by_value(cell).user_id == @game.user2_id %>
-    <%= "o" %>
+    <%= "O" %>
     <% else %>
-    <%= " " %>
+    <%= link_to "EMPTY", moves_path(game_id:@game.id, value:cell, user_id:current_user.id), method: :post %>
     <% end %>
   </td>
   <% end %>
