--- a/tictactoe/app/views/games/show.html.erb
+++ b/tictactoe/app/views/games/show.html.erb
@@ -1,33 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<table>
-<% table = (0..8).to_a %>
-<% table.each_slice(3) do |slice| %>
-<tr>
-  <% slice.each do |cell| %>
-  <td>
-    <% if @game.moves.find_by_value(cell) && @game.moves.find_by_value(cell).user_id == @game.user1_id %>
-    <%= "X" %>
-    <% elsif @game.moves.find_by_value(cell) && @game.moves.find_by_value(cell).user_id == @game.user2_id %>
-    <%= "O" %>
-    <% else %>
-    <%= link_to "EMPTY", moves_path(game_id:@game.id, value:cell, user_id:current_user.id), method: :post %>
-    <% end %>
-  </td>
-  <% end %>
-</tr>
-<% end %>
-  
-</table>
 <p>
-  <strong>User1:</strong>
-  <%= @game.user1_id %>
+<strong><%= User.find(@game.user1_id).username %> VS <%= User.find(@game.user2_id).username %></strong>
 </p>
 
-<p>
-  <strong>User2:</strong>
-  <%= @game.user2_id %>
-</p>
+<%= render 'table' %>
+
 
 <%= link_to 'Edit', edit_game_path(@game) %> |
 <%= link_to 'Back', games_path %>
+
