--- a/tictactoe/app/views/games/_table.html.erb
+++ b/tictactoe/app/views/games/_table.html.erb
@@ -1,3 +1,4 @@
+
 <table>
   <% table = (0..8).to_a %>
   <% table.each_slice(3) do |slice| %>
@@ -5,14 +6,19 @@
     <% slice.each do |cell| %>
     <td>
       <% if @game.moves.find_by_value(cell) && @game.moves.find_by_value(cell).user_id == @game.user1_id %>
-      <%= "X" %>
+        <%= "X" %>
       <% elsif @game.moves.find_by_value(cell) && @game.moves.find_by_value(cell).user_id == @game.user2_id %>
-      <%= "O" %>
+        <%= "O" %>
       <% else %>
-      <%= link_to "EMPTY", moves_path(game_id:@game.id, value:cell, user_id:current_user.id), method: :post %>
+        <% if @game.whose_move?.id == current_user.id %>
+          <%= link_to "EMPTY", moves_path(game_id:@game.id, value:cell, user_id:current_user.id), method: :post %>
+        <% else %>
+          EMPTY
+        <% end %>
       <% end %>
     </td>
     <% end %>
   </tr>
   <% end %>
 </table>
+
