--- a/tictactoe/app/views/games/_form.html.erb
+++ b/tictactoe/app/views/games/_form.html.erb
@@ -2,7 +2,7 @@
   <div class="field">
     <%= f.label :user2_id, 'Who would you like to play?' %><br>
     <%= hidden_field_tag 'game[user1_id]', current_user.id %>
-    <%= f.collection_select :user2_id, User.all, :id, :email %>
+    <%= f.collection_select :user2_id, User.all_except(current_user), :id, :username %>
   </div>
   <div class="actions">
     <%= f.submit 'Start' %>
