--- a/tictactoe/app/views/games/_table.html.erb
+++ b/tictactoe/app/views/games/_table.html.erb
@@ -6,16 +6,16 @@
     <% slice.each do |cell| %>
     <td>
       <% if @game.moves.find_by_value(cell) && @game.moves.find_by_value(cell).user_id == @game.user1_id %>
-        <%= "X" %>
+        <%= image_tag("x.png" ,width:'50') %>
       <% elsif @game.moves.find_by_value(cell) && @game.moves.find_by_value(cell).user_id == @game.user2_id %>
-        <%= "O" %>
+        <%= image_tag("o.png", width:'50') %>
       <% else %>
         <% if @game.game_finished %>
-          EMPTY
+          <%= image_tag("White_square.png", width:'50') %>
         <% elsif @game.whose_move.id == current_user.id %>
-          <%= link_to "EMPTY", moves_path(game_id:@game.id, value:cell, user_id:current_user.id), method: :post %>
+          <%= link_to image_tag("White_square.png", width:'50'), moves_path(game_id:@game.id, value:cell, user_id:current_user.id), method: :post %>
         <% else %>
-          EMPTY
+          <%= image_tag("White_square.png", width:'50') %>
         <% end %>
       <% end %>
     </td>
