--- a/tictactoe/app/views/layouts/application.html.erb
+++ b/tictactoe/app/views/layouts/application.html.erb
@@ -11,26 +11,40 @@
   <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<div>
-  <nav>
-    <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/games">Play Game</a></li>
-      <li><a href="/users">All Users</a></li>
+  <div class="contain-to-grid sticky">
+  <nav class="top-bar" data-topbar role="navigation">
+    <ul class="title-area">
+      <li class="name">
+        <h1><a href="/">TicTacToe</a></h1>
+      </li>
+       <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+      <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
     </ul>
-    <ul>
-      <% if user_signed_in? %>
-        <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
-        <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
-      <% else %>
-        <li><%= link_to "Login", new_user_session_path %></li>
-        <li><%= link_to "Create an account", new_user_registration_path %></li>
-      <% end %>
-    </ul>
+
+    <section class="top-bar-section">
+      <!-- Left Nav Section -->
+      <ul class="left">
+        <li><a href="/">Home</a></li>
+        <li><a href="/games">All Games</a></li>
+        <li><a href="/games/new">New Game</a></li>
+        <li><a href="/users">All Users</a></li>
+      </ul>
+      <ul>
+        <% if user_signed_in? %>
+          <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+          <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
+      </ul>
+        <% else %>
+        <ul>
+          <li><%= link_to "Login", new_user_session_path %></li>
+          <li><%= link_to "Create an account", new_user_registration_path %></li>
+        <% end %>
+      </ul>
+    </section>
   </nav>
 </div>
 
-  <body>
+  <body class="row">
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 
