--- a/tictactoe/app/views/games/index.html.erb
+++ b/tictactoe/app/views/games/index.html.erb
@@ -1,12 +1,15 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Games</h1>
+<h1>All Games</h1>
+
+<%= link_to 'New Game', new_game_path, class: 'success button' %>
 
 <table>
   <thead>
     <tr>
       <th>Player 1</th>
       <th>Player 2</th>
+      <th>Status</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,9 +19,15 @@
       <tr>
         <td><%= User.find(game.user1_id).username %></td>
         <td><%= User.find(game.user2_id).username %></td>
-        <td><%= link_to 'Show', game %></td>
-        <td><%= link_to 'Edit', edit_game_path(game) %></td>
-        <td><%= link_to 'Destroy', game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if game.game_finished %>
+        <td>Completed</td>
+        <% else %>
+        <td>Ongoing</td>
+        <% end %>
+        <td><%= link_to 'Show Game', game %></td>
+        <% if game.user1_id == current_user.id %>
+        <td><%= link_to 'Delete', game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +35,4 @@
 
 <br>
 
-<%= link_to 'New Game', new_game_path %>
+
