--- a/tictactoe/app/views/games/index.html.erb
+++ b/tictactoe/app/views/games/index.html.erb
@@ -9,7 +9,7 @@
     <tr>
       <th>Player 1</th>
       <th>Player 2</th>
-      <th>Status</th>
+      <th>Result</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,8 +19,10 @@
       <tr>
         <td><%= User.find(game.user1_id).username %></td>
         <td><%= User.find(game.user2_id).username %></td>
-        <% if game.game_finished %>
-        <td>Completed</td>
+        <% if game.game_won %>
+        <td>Winner: <%= User.find(game.game_winner).username %></td>
+        <% elsif game.game_draw %>
+        <td>Draw</td>  
         <% else %>
         <td>Ongoing</td>
         <% end %>
