--- a/tictactoe/app/views/games/_table.html.erb
+++ b/tictactoe/app/views/games/_table.html.erb
@@ -1,15 +1,19 @@
-
 <table>
-  <% table = (0..8).to_a %>
-  <% table.each_slice(3) do |slice| %>
+  <% (0..8).to_a.each_slice(3) do |slice| %>
   <tr>
     <% slice.each do |cell| %>
     <td>
-      <% if @game.moves.find_by_value(cell) && @game.moves.find_by_value(cell).user_id == @game.user1_id %>
-        <%= image_tag("x.png" ,width:'50') %>
-      <% elsif @game.moves.find_by_value(cell) && @game.moves.find_by_value(cell).user_id == @game.user2_id %>
-        <%= image_tag("o.png", width:'50') %>
+
+      <% if @game.moves.find_by_value(cell) %>
+
+        <% if @game.moves.find_by_value(cell).user_id == @game.user1_id %>
+          <%= image_tag("x.png" ,width:'50') %>
+        <% elsif @game.moves.find_by_value(cell).user_id == @game.user2_id %>
+          <%= image_tag("o.png", width:'50') %>
+        <% end %>
+
       <% else %>
+
         <% if @game.game_finished %>
           <%= image_tag("White_square.png", width:'50') %>
         <% elsif @game.whose_move.id == current_user.id %>
@@ -17,7 +21,9 @@
         <% else %>
           <%= image_tag("White_square.png", width:'50') %>
         <% end %>
+
       <% end %>
+
     </td>
     <% end %>
   </tr>
