--- a/tictactoe/app/views/devise/registrations/edit.html.erb
+++ b/tictactoe/app/views/devise/registrations/edit.html.erb
@@ -13,6 +13,12 @@
     <%= f.email_field :email %>
   </div>
 
+  <div class="field">
+    <%= f.label :user_image %><br />
+    <%= f.file_field :user_image %>
+  </div>
+
+
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
