--- a/tictactoe/app/views/users/index.html.erb
+++ b/tictactoe/app/views/users/index.html.erb
@@ -2,6 +2,7 @@
   <thead>
     <tr>
       <th>Username</th>
+      <th>Image</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -10,6 +11,7 @@
     <% @users.each do |user| %>
       <tr>
         <td><%= user.username %></td>
+        <td><%= image_tag user.user_image %></td>
         <td><%= link_to 'Show Profile', user %></td>
       </tr>
     <% end %>
