--- a/tictactoe/app/views/users/index.html.erb
+++ b/tictactoe/app/views/users/index.html.erb
@@ -3,16 +3,14 @@
     <tr>
       <th>Username</th>
       <th>Image</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= user.username %></td>
-        <td><%= image_tag user.user_image %></td>
-        <td><%= link_to 'Show Profile', user %></td>
+        <td><%= link_to "#{user.username}", user %></td>
+        <td><%= image_tag user.user_image.thumb %></td>
       </tr>
     <% end %>
   </tbody>
