--- a/tictactoe/app/assets/stylesheets/style.css
+++ b/tictactoe/app/assets/stylesheets/style.css
@@ -18,3 +18,11 @@ body {
   width:960px;
   text-align: center;
 }
+
+table {
+  text-align: center;
+  margin-left:auto;
+  margin-right:auto;
+}
+
+
