--- a/tictactoe/app/assets/stylesheets/style.css
+++ b/tictactoe/app/assets/stylesheets/style.css
@@ -23,6 +23,17 @@ table {
   text-align: center;
   margin-left:auto;
   margin-right:auto;
+  border: 5px solid black;
+  border-radius: 10px;
+
 }
 
+.profile_image_detail img {
+  border-radius: 50px ;
+  border: 15px solid black;
+}
+
+table tbody tr .profile_image_thumb img {
+  border-radius: 50px ;
+}
 
