--- a/tictactoe/app/views/users/index.html.erb
+++ b/tictactoe/app/views/users/index.html.erb
@@ -10,7 +10,7 @@
     <% @users.each do |user| %>
       <tr>
         <td><%= link_to "#{user.username}", user %></td>
-        <td><%= image_tag user.user_image.thumb %></td>
+        <td class="profile_image_thumb"><%= image_tag user.user_image.thumb %></td>
       </tr>
     <% end %>
   </tbody>
