--- a/tictactoe/app/views/layouts/application.html.erb
+++ b/tictactoe/app/views/layouts/application.html.erb
@@ -29,10 +29,17 @@
         <li><a href="/games/new">New Game</a></li>
         <li><a href="/users">All Users</a></li>
       </ul>
-      <ul>
+      <ul class="right">
         <% if user_signed_in? %>
           <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
           <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
+          <li>
+            <%= link_to user_path(current_user) do %>
+              <%= image_tag(current_user.user_image.topbarthumb) %>
+              <%= current_user.username %>
+            <% end %>
+          </li>
+
       </ul>
         <% else %>
         <ul>
