--- a/tictactoe/app/views/games/index.html.erb
+++ b/tictactoe/app/views/games/index.html.erb
@@ -7,8 +7,8 @@
 <table>
   <thead>
     <tr>
-      <th>Player 1</th>
-      <th>Player 2</th>
+      <th>Fighter 1</th>
+      <th>Fighter 2</th>
       <th>Result</th>
       <th colspan="3"></th>
     </tr>
