--- a/tictactoe/app/views/static_pages/home.html.erb
+++ b/tictactoe/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
-<h1>Tic Tac Toe</h1>
 
-<%= link_to 'Play TicTacToe', "/games/new" %>
+
+<h1><%= link_to "PLAY NOW!", "/games/new" %></h1>
 
 <br />
 
-<%= image_tag 'tic-tac-toe.png' %>
+<%= image_tag 'sfttt.png' %>
