more styling on homepage

--- a/tictactoe/app/views/layouts/application.html.erb
+++ b/tictactoe/app/views/layouts/application.html.erb
@@ -25,9 +25,9 @@
       <!-- Left Nav Section -->
       <ul class="left">
         <li><a href="/">Home</a></li>
-        <li><a href="/games">All Games</a></li>
-        <li><a href="/games/new">New Game</a></li>
-        <li><a href="/users">All Users</a></li>
+        <li><a href="/games">All Fights!</a></li>
+        <li><a href="/games/new">New Fight!</a></li>
+        <li><a href="/users">All Fighters!</a></li>
       </ul>
       <ul class="right">
         <% if user_signed_in? %>
