--- a/tictactoe/app/views/static_pages/home.html.erb
+++ b/tictactoe/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
 
 
-<h1><%= link_to "PLAY NOW!", "/games/new" %></h1>
+<h1 class="play_button"><%= link_to "PLAY NOW!", "/games/new", class: 'alert button' %></h1>
 
 <br />
 
