--- a/tictactoe/app/views/games/index.html.erb
+++ b/tictactoe/app/views/games/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>All Games</h1>
+<h1>All Fights</h1>
 
 <%= link_to 'New Game', new_game_path, class: 'success button' %>
 
