--- a/tictactoe/app/views/games/index.html.erb
+++ b/tictactoe/app/views/games/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>All Fights</h1>
 
-<%= link_to 'New Game', new_game_path, class: 'success button' %>
+<%= link_to 'New Fight', new_game_path, class: 'alert button' %>
 
 <table>
   <thead>
@@ -26,7 +26,7 @@
         <% else %>
         <td>Ongoing</td>
         <% end %>
-        <td><%= link_to 'Show Game', game %></td>
+        <td><%= link_to 'Show Fight', game %></td>
         <% if game.user1_id == current_user.id %>
         <td><%= link_to 'Delete', game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
