--- a/tictactoe/app/views/layouts/application.html.erb
+++ b/tictactoe/app/views/layouts/application.html.erb
@@ -3,12 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
 
   <title><%= content_for?(:title) ? yield(:title) : "foundation-rails" %></title>
 
   <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "vendor/modernizr" %>
-  <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
   <div class="contain-to-grid sticky">
@@ -52,8 +53,6 @@
 </div>
 
   <body class="row">
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
 
     <%= yield %>
 
