--- a/tictactoe/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/tictactoe/app/assets/stylesheets/foundation_and_overrides.scss
@@ -113,7 +113,7 @@ $include-html-global-classes: $include-html-classes;
 // $steel       : #666666;
 // $charcoal    : #555555;
 // $tuatara     : #444444;
-// $oil         : #333333;
+// $oil         : rgba(0,0,0,0.5);
 // $jet         : #222222;
 // $black       : #000000;
 
