--- a/tictactoe/app/assets/stylesheets/style.css
+++ b/tictactoe/app/assets/stylesheets/style.css
@@ -19,11 +19,16 @@ body {
 }
 
 table {
+  font-family: 'Shadows Into Light', cursive;
   text-align: center;
   margin-left:auto;
   margin-right:auto;
   border: 5px solid black;
   border-radius: 10px;
+}
+
+table tbody tr td {
+  font-family: 'Shadows Into Light', cursive;
 }
 
 h1 {
